# KDEsktop-copycat

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: building.md  configuration.md  installation.md  user-guide.md
examples/: README.md
src/: export.rs  kwin.rs  main.rs  model.rs  parser.rs  scripts.rs  tui.rs
