[package]
name = "kdesktop-copycat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kdesktop-copycat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
dirs = "5"
ratatui = "0.26"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
